# group-selfies

./: .pre-commit-config.yaml  README.md  pyproject.toml
group_selfies/: __init__.py  group_decoder.py  group_grammar.py  group_mol_graph.py
src/: __init__.py
src/group_selfies/: bond_constraints.py  constants.py  essential_set.txt  grammar_rules.py  group_decoder.py  group_encoder.py  group_mol_graph.py
src/group_selfies/utils/: fragment_utils.py  group_utils.py  selfies_utils.py
tests/emolecules/: roundtrip.py
tutorial/: test_utils.py  tutorial.ipynb
