[project]
name = "group-selfies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "global-chem>=1.10.0",
    "importlib>=1.0.4",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "rdkit>=2024.9.5",
    "tdqm>=0.0.1",
]

[tool.ruff.lint]
ignore = ["E722", "F401", "F841", "E741"]
